--- a/talkiz/src/component/Thames/UserStyle.css
+++ b/talkiz/src/component/Thames/UserStyle.css
@@ -122,9 +122,15 @@ li {
 .header-profile {
     min-height: 50px;
     min-width: 50px;
-    background: salmon;
+    background:#6cdbeb;
     border-radius: 50%;
     margin-left: 50px;
+    display: flex;
+}
+
+.pro-pic{
+    min-height: 50px;
+    min-width: 50px;
 }
 
 Link{
@@ -147,7 +153,6 @@ Link{
     font-size: 16px;
     border: none;
     margin-top: 15px;
-    transform: rotate(90deg);
     box-shadow: 0px 8px 16px 0px #adfc9db2;
 }
 
@@ -223,33 +228,81 @@ Link{
 }
 
 .sub-add-result{
-    height: 30vh;
-    width: 550px;
+    height: 17vh;
+    width: 450px;
     display: flex;
     flex-direction: row;
 }
 
 .profile-pic{
-    background: chartreuse;
+    background:#6cdbeb;
     height: 100px;
     width: 100px;
     border-radius: 50%;
     margin-right: 10px;
 }
 
+.add-pro-pic{
+    min-height: 100px;
+    min-width: 100px;
+}
+
 .detail-container{
-    background: chartreuse;
-    height: 22vh;
+    height: 16vh;
     width: 400px;
+    display: flex;
 }
 
-.detail-container label{
-    background:white;
+.details{
+    margin-top: -15px;
+    margin-left:15px;
 }
 
-.add-result button{
+.details h4{
+    margin-top: -10px;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+}
+
+.buttons button{
     border-radius: 0.8rem;
     opacity: 0.8;
     min-width: 100px;
-    margin-left: 120px;
+}
+
+/*................................css for notification page................................................*/
+.value-container{
+    display: block;
+
+    margin-left: 300px;
+    margin-top: 40px;
+}
+
+.fromat-container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.value-container button{
+    border-radius: 0.8rem;
+    opacity: 0.8;
+    min-width: 100px;
+}
+
+.fromat-container label{
+    font-family: Georgia, serif;
+    font-size: 18px;
+    margin-left: 10px;
+}
+
+.noti-profile-pic{
+    background:#6cdbeb;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin-right: 20px;
 }
